objects/Arxxus_To_Do_App__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closure_Comments__c</fullName>
        <label>Closure Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimate_in_Hours__c</fullName>
        <label>Estimate in Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Not a Defect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Arxxus To Do App</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Arxxus To Do App Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Arxxus To Do App</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>